--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "needle": "^2.5.2",
     "path": "^0.12.7",
     "ruqqus-js": "^3.1.0",
+    "url": "^0.11.0",
     "uuid": "^8.3.1"
   },
   "engines": {
